--- a/WATERCryst.myBIOCAT.App/WATERCryst.myBIOCAT.App.csproj
+++ b/WATERCryst.myBIOCAT.App/WATERCryst.myBIOCAT.App.csproj
@@ -7,4 +7,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\WATERCryst.myBIOCAT.RestClient\WATERCryst.myBIOCAT.RestClient.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    </ItemGroup>
+
 </Project>
